# bevy_novel

./: Cargo.toml  README.md
assets/: script.rpy
examples/: lunex_text.rs  minimal.rs
src/: events.rs  lib.rs  messages.rs  rpy_asset_loader.rs
