[package]
edition = "2021"
name = "bevy_novel"
version = "0.16.0"
license = "MIT OR Apache-2.0"
description = "Visual Novels with Bevy"
keywords = ["visual-novel", "renpy", "rpy", "bevy", "scenario"]
repository = "https://github.com/stillonearth/bevy_novel"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",

    "std",
    "animation",
    "default_font",
    "jpeg",
    "multi_threaded",
    "png",
    "serialize",
    "wayland",
    "web",
    "x11",
] }
regex = "1.11.1"
renpy_parser = "0.0.13"
bevy_kira_audio = { version = "0.23", features = ["ogg", "mp3", "wav"] }
thiserror = "2.0"
serde = "1.0"
bevy_defer = "0.14"

[dev-dependencies]
bevy-inspector-egui = "0.31.0"

[profile.dev]
opt-level = 3
