[package]
edition = "2024"
name = "bevy_novel"
version = "0.18.0"
license = "MIT OR Apache-2.0"
description = "Visual Novels with Bevy"
keywords = ["visual-novel", "renpy", "rpy", "bevy", "scenario"]
repository = "https://github.com/stillonearth/bevy_novel"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",

    "std",
    "reflect_auto_register",
    "default_font",
    "jpeg",
    "multi_threaded",
    "png",
    "serialize",
    "wayland",
    "web",
    "x11",
] }
regex = "1.11.1"
renpy_parser = "0.0.13"
bevy_kira_audio = { version = "0.25", features = ["ogg", "mp3", "wav"] }
thiserror = "2.0"
serde = "1.0"
bevy_defer = "0.17"

[dev-dependencies]
bevy-inspector-egui = "0.36"

[profile.dev]
opt-level = 3
